WIP: feat(vault): adding staking feature to Vault app and Fireblocks client
