# libs/clients/k33-backend-client/src/main/openapi/k33-backend-api.yaml
@@ -608,6 +608,101 @@ paths:
       security:
         - firebase: [ ]
 
+  "/apps/vault/staking/assets":
+    get:
+      description: Get vault staking assets
+      operationId: "getVaultStakingAssets"
+      produces:
+        - "application/json"
+      responses:
+        200:
+          description: Vault staking assets
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/VaultStakingAsset"
+      security:
+        - firebase: [ ]
+
+  "/apps/vault/staking/positions":
+    get:
+      description: Get vault staking positions
+      operationId: "getVaultStakingPositions"
+      produces:
+        - "application/json"
+      responses:
+        200:
+          description: Vault staking positions
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/VaultStakingPosition"
+      security:
+        - firebase: [ ]
+    post:
+      description: Create Vault Staking Position
+      operationId: createVaultStakingPosition
+      consumes:
+        - "application/json"
+      produces:
+        - "application/json"
+      parameters:
+        - name: StakingRequest
+          in: body
+          schema:
+            $ref: "#/definitions/StakeRequest"
+      responses:
+        201:
+          description: Created vault staking position
+          schema:
+            $ref: "#/definitions/VaultStakingPosition"
+        404:
+          description: Bad request
+      security:
+        - firebase: [ ]
+  "/apps/vault/staking/positions/{stakingPositionId}":
+    get:
+      description: Get vault staking position by id
+      operationId: "getVaultStakingPosition"
+      produces:
+        - "application/json"
+      parameters:
+        - name: stakingPositionId
+          in: path
+          type: string
+          required: true
+      responses:
+        200:
+          description: Vault staking position
+          schema:
+            $ref: "#/definitions/VaultStakingPosition"
+      security:
+        - firebase: [ ]
+    put:
+      description: Unstake or claim rewards
+      operationId: "updateVaultStakingPosition"
+      produces:
+        - "application/json"
+      parameters:
+        - name: stakingPositionId
+          in: path
+          type: string
+          required: true
+        - name: action
+          in: query
+          type: string
+          enum:
+            - stake
+            - claimRewards
+          required: true
+      responses:
+        200:
+          description: Vault staking position
+          schema:
+            $ref: "#/definitions/VaultStakingPosition"
+      security:
+        - firebase: [ ]
+
 
 definitions:
 
@@ -1094,6 +1189,100 @@ definitions:
         type: string
     required:
       - currency
+  VaultStakingAsset:
+    type: object
+    properties:
+      id:
+        type: string
+      available:
+        type: string
+      pending:
+        type: string
+      staked:
+        type: string
+    required:
+      - id
+  VaultStakingPosition:
+    type: object
+    properties:
+      id:
+        type: string
+      vaultAccountId:
+        type: string
+      validatorName:
+        type: string
+      providerName:
+        type: string
+      chainDescriptor:
+        type: string
+      amount:
+        type: string
+      rewardsAmount:
+        type: string
+      dateCreated:
+        type: string
+      status:
+        type: string
+      relatedTransactions:
+        type: array
+        items:
+          $ref: "#/definitions/RelatedTransaction"
+      validatorAddress:
+        type: string
+      providerId:
+        type: string
+      availableActions:
+        type: array
+        items:
+          type: string
+      inProgress:
+        type: boolean
+      inProgressTxId:
+        type: string
+      blockchainPositionInfo:
+        type: object
+        $ref: "#/definitions/BlockchainPositionInfo"
+    required:
+      - id
+      - vaultAccountId
+      - validatorName
+      - providerName
+      - chainDescriptor
+      - amount
+      - rewardsAmount
+      - dateCreated
+      - status
+      - relatedTransactions
+      - validatorAddress
+      - providerId
+      - availableActions
+      - inProgress
+      - blockchainPositionInfo
+  RelatedTransaction:
+    type: object
+    properties:
+      txId:
+        type: string
+      completed:
+        type: boolean
+    required:
+      - txId
+      - completed
+  BlockchainPositionInfo:
+    type: object
+    properties:
+      stakeAccountAddress:
+        type: string
+  StakeRequest:
+    type: object
+    properties:
+      vaultAssetId:
+        type: string
+      amount:
+        type: string
+    required:
+      - vaultAssetId
+      - amount
 
 
 securityDefinitions:
